<resources>
    <string name="app_name">OhtongBluetooth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ohtong Bluetooth</string>
    <string name="nav_header_subtitle">ssjigi@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_device_info">Device Info</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bluetooth_low_energy"><b>Bluetooth Low Energy</b></string>
    <string name="hardware"><b>Hardware</b></string>
    <string name="bluetooth_common"><b>Bluetooth Common</b></string>
    <string name="device_name">Device name</string>
    <string name="android_version">Android version</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="build_version">Build version</string>
    <string name="board">Board</string>
    <string name="product">Product</string>
    <string name="bt_name">BT name</string>
    <string name="bt_address">BT address</string>
    <string name="br_edr_scan_mode">BR/EDR scan mode</string>
</resources>