<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scan">

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.ohtong.bluetooth.ui.scan.ScanFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_device_info"
        android:name="com.ohtong.bluetooth.ui.device.DeviceInfoFragment"
        android:label="@string/menu_device_info"
        tools:layout="@layout/fragment_device" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ohtong.bluetooth.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>